--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,4 +42,9 @@
         <item name="boxStrokeColor">@color/input_box_high_light_color_list</item>
     </style>
 
+    <!--    Search box-->
+    <style name="AppSearchView" parent="Widget.AppCompat.SearchView" >
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
