--- a/app/src/main/res/layout/fragment_booking_list.xml
+++ b/app/src/main/res/layout/fragment_booking_list.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:paddingBottom="5dp"/>
+        android:padding="8dp"/>
 
 <!--    <androidx.recyclerview.widget.RecyclerView-->
 <!--        android:id="@+id/rv_booking_list"-->
@@ -33,6 +33,4 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:visibility="gone"/>
-
-
 </LinearLayout>
