--- a/app/src/main/res/layout/item_booking_info2.xml
+++ b/app/src/main/res/layout/item_booking_info2.xml
@@ -27,52 +27,35 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_row_booking_ref_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Booking Reference"
-            android:textColor="@color/textMuted"
-            android:textSize="12sp"
-            tools:layout_editor_absoluteX="103dp"
-            tools:layout_editor_absoluteY="139dp" />
-
-        <TextView
-            android:id="@+id/tv_row_booked_on_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Booked On"
-            android:textColor="@color/textMuted"
-            android:textSize="12sp"
-            tools:layout_editor_absoluteX="332dp"
-            tools:layout_editor_absoluteY="91dp" />
-
-        <TextView
             android:id="@+id/tv_row_booked_on"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Feb 24 2022, 01:40pm"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            tools:layout_editor_absoluteX="252dp"
-            tools:layout_editor_absoluteY="139dp" />
+            android:layout_marginTop="8dp"
+            android:text="Booked On Apr 21, 2022, 12:00am"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/textMuted"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/tv_row_checkin_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="Check In"
             android:textColor="@color/textMuted"
             android:textSize="12sp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="150dp" />
+            app:layout_constraintStart_toStartOf="@+id/tv_row_booked_on"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_booked_on" />
 
         <TextView
             android:id="@+id/tv_checkIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2022-2-25"
+            android:text="Apr 25, 2022"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            tools:layout_editor_absoluteX="32dp"
-            tools:layout_editor_absoluteY="198dp" />
+            app:layout_constraintStart_toStartOf="@+id/tv_row_checkin_label"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_checkin_label" />
 
         <TextView
             android:id="@+id/tv_row_checkout_label"
@@ -81,36 +64,33 @@
             android:text="Check Out"
             android:textColor="@color/textMuted"
             android:textSize="12sp"
-            tools:layout_editor_absoluteX="336dp"
-            tools:layout_editor_absoluteY="198dp" />
-
-        <TextView
-            android:id="@+id/tv_row_checkout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2022-02-27"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            tools:layout_editor_absoluteX="320dp"
-            tools:layout_editor_absoluteY="246dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_row_checkin_label" />
 
         <View
             android:id="@+id/view6"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             android:background="@color/textMuted"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="232dp" />
+            app:layout_constraintBottom_toBottomOf="@+id/tv_checkIn"
+            app:layout_constraintEnd_toStartOf="@+id/tv_row_checkout"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/tv_checkIn" />
 
         <TextView
             android:id="@+id/tv_row_nights"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="2 nights"
-            tools:layout_editor_absoluteX="294dp"
-            tools:layout_editor_absoluteY="203dp" />
+            app:layout_constraintEnd_toStartOf="@+id/tv_row_checkout"
+            app:layout_constraintStart_toEndOf="@+id/tv_checkIn"
+            app:layout_constraintTop_toTopOf="@+id/tv_row_checkin_label" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_row_booking_ref"
             android:textColor="@color/text_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -118,6 +98,35 @@
             android:text="Ref: 2022-3456"
             app:layout_constraintStart_toStartOf="@+id/tv_row_guest_name_num_guest_num_rooms"
             app:layout_constraintTop_toBottomOf="@+id/tv_row_guest_name_num_guest_num_rooms" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="8dp"
+            style=""
+            app:layout_constraintStart_toStartOf="@+id/tv_row_booking_ref"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_booking_ref"
+            app:srcCompat="@drawable/night_shelter" />
+
+        <TextView
+            android:id="@+id/tv_row_room_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Deluxe Room"
+            style="@style/TextAppearance.AppCompat.Caption"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+        <TextView
+            android:id="@+id/tv_row_checkout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Apr 27, 2022"
+            app:layout_constraintEnd_toEndOf="@+id/tv_row_checkout_label"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_checkout_label" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
